<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.styliii.gridimagesearch.activities.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_title"
        android:id="@+id/tvSettingsTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/image_size"
        android:id="@+id/tvImageSize"
        android:layout_alignLeft="@+id/tvSettingsTitle"
        android:layout_alignStart="@+id/tvSettingsTitle"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_alignBottom="@+id/spImageSize"
        android:gravity="center_vertical" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageSize"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_toRightOf="@+id/tvImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical|right|end"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/color_filter"
        android:id="@+id/tvColorFilter"
        android:layout_below="@+id/tvImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spColorFilter"
        android:gravity="center_vertical" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spColorFilter"
        android:entries="@array/color_filter_array"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:layout_below="@+id/tvImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical|right|end"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/image_type"
        android:id="@+id/tvImageType"
        android:layout_below="@+id/tvColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spImageType"
        android:gravity="center_vertical" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageType"
        android:entries="@array/image_type_array"
        android:layout_below="@+id/tvColorFilter"
        android:layout_toRightOf="@+id/tvImageType"
        android:spinnerMode="dropdown"
        android:gravity="center_vertical|right|end"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/site_filter"
        android:id="@+id/tvSiteFilter"
        android:layout_below="@id/tvImageType"
        android:layout_alignLeft="@id/tvImageType"
        android:layout_alignStart="@id/tvImageType"
        android:layout_alignBottom="@+id/etSiteFilter"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:layout_below="@id/spImageType"
        android:layout_toRightOf="@id/tvSiteFilter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="right|end" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_below="@id/etSiteFilter"
        android:layout_centerInParent="true"
        android:layout_marginTop="38dp" />


</RelativeLayout>